# Codex_Account_Switch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  package-lock.json  package.json  plan.md  requirements-dev.txt  vite.config.ts
.github/workflows/: windows-tauri-build.yml
.tmp_pycompile/: common.pyc.3001911453232
backend/: __main__.py  actions.py  api.py  config.py  errors.py  metadata_store.py  models.py  profile_store.py  switch_service.py
backend/static/: app.js  index.html  styles.css
docs/: IMPLEMENTATION.md  SECURITY.md
macOS/: WINDOWS_SPLIT_NOTE.md  codex-switch.sh  install.sh  uninstall.sh
scripts/: codex-switch.sh  install.sh  smoke-test.sh
src/: index.html  main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  errors.rs  lib.rs  main.rs  models.rs  windowing.rs
src-tauri/src/commands/: actions.rs  dashboard.rs  mod.rs  switch.rs
src-tauri/src/windows/: actions.rs  bootstrap.rs  config.rs  dashboard.rs  fs_ops.rs  install.rs  metadata.rs  mod.rs  paths.rs  process.rs  profile_actions.rs  profiles.rs  profiles_index.rs  refresh_runtime.rs  session_files.rs  session_usage.rs  switch.rs
tests/: test_backend_api.py  test_backend_frontend.py  test_backend_models.py  test_backend_profile_store.py  test_backend_switch_service.py  test_macos_install.py  test_windows_common.py  test_windows_install.py  test_windows_switch.py  test_windows_uninstall.py
windows/: README.md  __init__.py  codex_switch.py  common.py  install.py  uninstall.py
(+10 files in other folders)
