[package]
name = "codex_switch"
version = "0.1.0"
description = "Native Tauri control panel for Codex account switching"
authors = ["Cmochance"]
edition = "2021"

[lib]
name = "codex_switch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-opener = "2.5.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
